Ensure spacing between heading & close button in `Modal`

--- a/packages/react/src/components/Modal/Modal.css
+++ b/packages/react/src/components/Modal/Modal.css
@@ -80,6 +80,7 @@
     gap: var(--h-modal-content-gap);
     justify-content: center;
     height: fit-content;
+    margin-right: calc(24px + var(--h-space-100));
 
     &:where([data-contains-image] &) {
       align-items: center;
